fixtures/frontend/milestone-2/invalid/custom-source-provider-option-type-mismatch/main.aivi
domain Duration over Int
    literal ms : Int -> Duration

provider custom.feed
    option timeout: Duration
    wakeup: providerTrigger

@source custom.feed with {
    timeout: 1
}
sig updates : Signal Int
